feat: delete project and budget
